--- a/app/ems/webapp/i18n/i18n.properties
+++ b/app/ems/webapp/i18n/i18n.properties
@@ -9,3 +9,30 @@ appTitle=Employee Management System
 appDescription=An SAP Fiori application.
 #XTIT: Main view title
 title=Employee Management System
+
+# Employee List View
+employeeListTitle=Employee List
+departmentLabel=Department:
+roleLabel=Role:
+selectDepartmentPlaceholder=Select Department
+selectRolePlaceholder=Select Role
+clearFiltersButton=Clear Filters
+refreshDataTooltip=Refresh Data
+employeesTableTitle=Employees
+addEmployeeButton=Add Employee
+
+welcome=Welcome
+admin=Admin
+viewer=Viewer
+# Table Columns
+nameColumn=Name
+emailColumn=Email
+departmentColumn=Department
+roleColumn=Role
+
+# Messages
+dataRefreshed=Data refreshed successfully
+errorLoadingUserInfo=Error loading user information
+errorLoadingDepartments=Error loading departments
+errorLoadingRoles=Error loading roles
+errorLoadingEmployees=Error loading employees
